--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -36,14 +36,11 @@ jobs:
             libxext-dev \
             wget \
             imagemagick \
-            fuse
+            fuse \
+            9base
 
       - name: Build TaijiOS
         run: |
-          # Create output directory and copy pre-built mk binary
-          mkdir -p Linux/amd64/bin
-          cp utils/mk/mk Linux/amd64/bin/mk
-          chmod +x Linux/amd64/bin/mk
           chmod +x run.sh
           ./run.sh --build
 
