--- a/android-port/app/src/main/cpp/CMakeLists.txt
+++ b/android-port/app/src/main/cpp/CMakeLists.txt
@@ -190,6 +190,9 @@ list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*dlm-.*")
 list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*dlm\\.c")
 list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*optab.c")
 list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*prefab.c")
+list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*\\.backup")
+list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*~")
+list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*cryptstub\\.c")
 # Only keep ARM compiler for Android
 list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*comp-386.*")
 list(FILTER LIBINTERP_SOURCES EXCLUDE REGEX ".*comp-amd64.*")
